# s-remix-django-ms

./: .env.example  .gitignore  ReadME.md  manage.py  pyproject.toml
apps/core/: admin.py  authentication.py  choices.py  database_router.py  exceptions.py  models.py
apps/core/management/commands/: inspectremix.py  updatedbconstraints.py
apps/remix/: apps.py  models.py
apps/remix/api/: urls.py  views.py
apps/remix/api/Profile/: serializers.py  views.py
apps/remix/api/Session/: serializers.py  views.py
apps/remix/api/Settings/: serializers.py  views.py
base/: api_urls.py  urls.py
base/settings/: base.py  logger.py  prod.py
